fix: major and minor bugs :: memory leak, MCP tools, server down ....